--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "dompurify": "^3.0.9",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "firebase": "^10.8.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.1",
